<resources>
    <string name="app_name">MuscleSloth</string>
    <string name="arc_floor_plan">Arc Floor Plan</string>
    <string name="tread_mill">Treadmill</string>
    <string name="exercise_bike">Exercise Bike</string>
    <string name="bench_press">Bench Press</string>
    <string name="manage_work">Manage Workouts</string>
    <string name="image_desc">Main Logo Image</string>
    <string name="title">Muscle Sloth</string>
    <string name="new_symbol">+</string>
    <string name="combat_room">Combat Room</string>
    <string name="managing_work">Managing Workouts</string>
    <string name="find_times">Find Times</string>
    <string name="title_activity_workout_edit">Edit Workout</string>
    <string name="title_activity_scheduling_prefs">Select Data and Time</string>

    <string name="gym_one">Gym 1</string>

    <string name="title_activity_floor_plan">Floor Plan</string>
    <string name="action_settings">Settings</string>
    <string name="no_entries">No entries in here. Click on the plus button below to add some!</string>

</resources>
