<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:verticalSpacing="5dp"
    android:orientation="vertical"
    tools:context="com.tom_roush.musclesloth.MainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="279dp"
        app:srcCompat="@drawable/sloth_logo"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="fitCenter" />

    <Button
        android:text="@string/arc_floor_plan"
        android:layout_width="246dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:id="@+id/button" />

    <Button
        android:text="@string/manage_work"
        android:layout_width="246dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:id="@+id/button2"
        android:layout_weight="0.13" />
</LinearLayout>
