<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_machine_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.tom_roush.musclesloth.MachinePageActivity">
    <TextView
        android:text="@string/gym_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="45sp"
        android:typeface="sans"
        android:layout_margin="5dp"
        android:id="@+id/title_txt" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_weight="0.05"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_weight=".02">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
                android:layout_weight=".6">


            <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/green_press"
                android:id="@+id/green_bp"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:onClick="startMachineSpecific3Activity"/>

                <ImageView
                    android:scaleX = "0.9"
                    android:scaleY = "0.9"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/green_threadmill"
                    android:id="@+id/green"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="startThreadmill"/>

                <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/red_threadmill"
                android:id="@+id/two"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView5"
                android:layout_toEndOf="@+id/imageView5"
                    android:onClick="startMachineSpecificActivity"/>

                <ImageView
                    android:scaleX = "0.9"
                    android:scaleY = "0.9"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/green_threadmill"
                    android:id="@+id/third"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imageView5"
                    android:layout_toEndOf="@+id/imageView5"
                    android:onClick="startMachineSpecificActivity"/>
         </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/red_cycle"
                android:id="@+id/cycles1"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:onClick="startExerciseBike"/>

            <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/green_cycle"
                android:id="@+id/cycles2"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toEndOf="@+id/imageView4"
                android:onClick="startExerciseBike"/>

            <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/red_cycle"
                android:id="@+id/cycles3"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="startExerciseBike"/>

            <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/red_cycle"
                android:id="@+id/cycles4"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="startExerciseBike"/>

            <ImageView
                android:scaleX = "0.9"
                android:scaleY = "0.9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/green_threadmill"
                android:id="@+id/imageView3"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imageView5"
                android:layout_toEndOf="@+id/imageView5" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="Machines"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30dp"
        android:paddingTop="7dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:id="@+id/textView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:weightSum="1">


            <Button
                android:text="@string/tread_mill"
                android:textSize="20dp"
                android:layout_marginLeft="19dp"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/treadmill"
                android:layout_weight=".7"
                android:background="@color/white"
                android:onClick="startMachineSpecificActivity"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:scaleX = "0.7"
                android:scaleY = "0.7"
                android:layout_height="match_parent"
                app:srcCompat="@android:drawable/presence_online"
                android:id="@+id/imageView6"
                android:layout_weight=".2"/>

            <TextView
                android:text="2"
                android:textColor="@color/green"
                android:textSize="20dp"
                android:layout_marginTop="9dp"
                android:textAlignment="center"
                android:layout_marginLeft="19dp"
                android:layout_gravity="center"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:id="@+id/textView3"
                android:layout_weight=".2" />

                <ImageView
                    android:layout_width="30dp"
                    android:scaleX = "0.7"
                    android:scaleY = "0.7"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/presence_busy"
                    android:id="@+id/imageView8"
                    android:layout_weight=".2"/>

                <TextView
                    android:text="1"
                    android:textColor="@color/red"
                    android:textSize="20dp"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:layout_marginLeft="19dp"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView4"
                    android:layout_weight=".2" />
            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:weightSum="1">


            <Button
                android:text="@string/bench_press"
                android:textSize="20dp"
                android:layout_marginLeft="19dp"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/benchpress"
                android:layout_weight=".7"
                android:background="@color/white"
                android:onClick="startMachineSpecific3Activity"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:scaleX = "0.7"
                    android:scaleY = "0.7"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/presence_online"
                    android:id="@+id/ava"
                    android:layout_weight=".2"/>

                <TextView
                    android:text="1"
                    android:textColor="@color/green"
                    android:textSize="20dp"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:layout_marginLeft="19dp"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:id="@+id/number"
                    android:layout_weight=".2" />

                <ImageView
                    android:layout_width="30dp"
                    android:scaleX = "0.7"
                    android:scaleY = "0.7"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/presence_busy"
                    android:id="@+id/ibusy"
                    android:layout_weight=".2"/>

                <TextView
                    android:text="1"
                    android:textColor="@color/red"
                    android:textSize="20dp"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:layout_marginLeft="19dp"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:id="@+id/no2"
                    android:layout_weight=".2" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:weightSum="1">


            <Button
                android:text="@string/exercise_bike"
                android:textSize="20dp"
                android:layout_marginLeft="19dp"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:id="@+id/cycle"
                android:layout_weight=".7"
                android:background="@color/white"
                android:onClick="startMachineSpecific2Activity"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="30dp"
                    android:scaleX = "0.7"
                    android:scaleY = "0.7"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/presence_online"
                    android:id="@+id/imageView7"
                    android:layout_weight=".2"/>

                <TextView
                    android:text="1"
                    android:textColor="@color/green"
                    android:textSize="20dp"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:layout_marginLeft="19dp"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView1"
                    android:layout_weight=".2" />

                <ImageView
                    android:layout_width="30dp"
                    android:scaleX = "0.7"
                    android:scaleY = "0.7"
                    android:layout_height="match_parent"
                    app:srcCompat="@android:drawable/presence_busy"
                    android:id="@+id/imageView7"
                    android:layout_weight=".2"/>

                <TextView
                    android:text="3"
                    android:textColor="@color/red"
                    android:textSize="20dp"
                    android:layout_marginTop="9dp"
                    android:textAlignment="center"
                    android:layout_marginLeft="19dp"
                    android:layout_gravity="center"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView7"
                    android:layout_weight=".2" />
            </LinearLayout>


        </LinearLayout>





    </LinearLayout>

</LinearLayout>

